infra/k8s/base/article-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: article-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: article-service
  template:
    metadata:
      labels:
        app: article-service
    spec:
      containers:
        - name: article-service
          image: collector/article-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3004
          readinessProbe:
            httpGet:
              path: /health
              port: 3004
            initialDelaySeconds: 15
            periodSeconds: 10
