infra/k8s/base/article-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: article-service
spec:
  selector:
    app: article-service
  ports:
    - port: 3004
      targetPort: 3004
