infra/k8s/base/audit-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audit-service
spec:
  selector:
    app: audit-service
  ports:
    - port: 3005
      targetPort: 3005
