infra/k8s/base/catalog-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
spec:
  selector:
    app: catalog-service
  ports:
    - port: 3003
      targetPort: 3003
