infra/k8s/base/notification-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification-service
  ports:
    - port: 3006
      targetPort: 3006
